--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -18,7 +18,7 @@ eureka:
     prefer-ip-address: true
   client:
     serviceUrl:
-      defaultZone: http://eureka:8761/eureka/
+      defaultZone: http://gen-eureka3fpnq3iv2r:8761/eureka/
 
 security:
   oauth2:
@@ -45,18 +45,18 @@ spring:
         enbabled: true
     sampler:
       probability: 1
-#  zipkin:
-#    base-url: http://zipkin:9411
-#    enabled: true
-#    self-tracing:
-#      enabled: true
-#    sender:
-#      type: web
-#    locator:
-#      discovery:
-#        enabled: true
+  zipkin:
+    base-url: http://gen-zipkinvrp4otwhxj:9411
+    enabled: true
+    self-tracing:
+      enabled: true
+    sender:
+      type: web
+    locator:
+      discovery:
+        enabled: true
 #percentage
-#management.endpoints.web.exposure.include: "*"
+management.endpoints.web.exposure.include: "*"
 #spring.cloud.bus.enabled=true
 #spring.cloud.bus.trace.enabled=true
 #management.endpoints.web.exposure.include=bus-refresh
